update role in user